# Lexitor

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DECISIONS.md  DESIGN_BRIEF.md  FOR_DEVELOPER.md  PHASES.md  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/app/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/app/docs/: don-manual-test.md
apps/app/src/app/: globals.css  layout.tsx
apps/app/src/app/(app)/: layout.tsx
apps/app/src/components/: AnalysisResults.tsx  AuthGate.tsx  DocumentList.tsx  DocumentSetUpload.tsx  HighlightedText.tsx  Sidebar.tsx  StatusBadge.tsx  ThemeToggle.tsx  UploadDropzone.tsx
apps/app/src/contexts/: auth-context.tsx
apps/app/src/hooks/: useAnalysisStream.ts  useTheme.ts
apps/app/src/lib/: api.ts  auth-storage.ts  types.ts
apps/backend/: .env.example  alembic.ini  pyproject.toml  run.py
apps/backend/data/: brands.json
apps/backend/docs/: NEXT-STEPS.md  SAAS-ARCHITECTURE.md
apps/backend/scripts/: README.md  _compare_pair.py  _triage_troskovnici.py  analyze_dkom.py  compare_parser_vs_arh.py  consistency_dkom.py  daily_dkom.py  extract_dkom.py  index_dkom.py  index_dkom_claims.py  index_legislation.py  index_zjn.py  normalize_dkom_names.py  retry_failed_dkom.py  scrape_dkom.py  scrape_legislation.py  scrape_vus.py  scrape_zjn.py  seed_dkom_rules.py  spotcheck_dkom_categories.py
apps/backend/src/api/: deps.py  main.py
apps/backend/src/api/routes/: admin_spotcheck.py  analyses.py  auth.py  documents.py  knowledge.py  labels.py  projects.py  zalbe.py
apps/backend/src/api/schemas/: analysis.py  auth.py  document.py  knowledge.py  organization.py  spotcheck.py  subscription.py  zalbe.py
apps/backend/src/core/: events.py
apps/backend/src/core/analyzer/: __init__.py  don_rules.py  mock.py  rules.py
apps/backend/src/core/report/: __init__.py  pdf.py
apps/backend/src/db/: session.py
apps/backend/src/db/migrations/: env.py
apps/backend/src/db/migrations/versions/: a3f8c0d5e201_add_user_feedback_to_analysis_items.py  b4e1d2a91f3c_add_project_logo_path.py  bee2d1e57ac0_add_highlights_to_analysis_items.py  c5a2b3d4e106_add_findings_to_analysis_items.py  d6b3e4f5a207_add_user_added_findings.py  e7c4f5a608b2_add_troskovnik_type_to_documents.py  f8d5c6b9a014_add_user_kind_override.py  f9414530beec_initial_schema.py  g9e6d7c0b125_add_document_sets.py  h0a1b2c3d426_add_organizations_subscriptions.py
apps/backend/src/document_parser/: __init__.py  arh_xlsx.py  arhigon_parser.py  base.py  canonical_xlsx.py  dispatcher.py  docx_parser.py  markdown_parser.py  pdf_parser.py  subtype.py  xlsx_parser.py
apps/backend/src/knowledge_base/: __init__.py  chunker.py  embedder.py  indexer.py  pdf_text.py
apps/backend/src/models/: __init__.py  analysis.py  citation.py  document.py  document_set.py  module.py  organization.py  project.py  subscription.py  usage_record.py  user.py
apps/backend/src/services/: document_service.py
apps/backend/src/utils/: security.py
apps/backend/tests/unit/: test_analyzer_brand.py  test_analyzer_rules.py  test_canonical_xlsx.py
apps/web/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Footer.tsx  Header.tsx  ThemeToggle.tsx
apps/web/src/hooks/: useTheme.ts
docs/: COMMUNITY-REVIEWER-PROGRAM.md  DEPLOYMENT.md
src/api/: main.py
src/db/: session.py
src/db/migrations/: env.py
src/utils/: config.py
tests/unit/: test_health.py
(+25 files in other folders)
